--- a/shuishui/res/values/color.xml
+++ b/shuishui/res/values/color.xml
@@ -3,4 +3,8 @@
     <color name="white">#FFFFFF</color>
     <color name="light_blue">#5CACEE</color>
     <color name="alp100">#00000000</color>
+      <color name="gray">#adadad</color>
+    <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="cfive">#C5C5C5</color>
 </resources>
