--- a/shuishui/res/layout/fragment_button_tab.xml
+++ b/shuishui/res/layout/fragment_button_tab.xml
@@ -23,7 +23,6 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:visibility="gone" />
+        android:textColor="@color/black"/>
 
 </LinearLayout>
