--- a/shuishui/res/values/styles.xml
+++ b/shuishui/res/values/styles.xml
@@ -16,5 +16,11 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-
+	<style name="Bottombtnimg">
+	    <item name="android:layout_width">40dp</item>
+	    <item name="android:layout_height">40dp</item>
+	    <item name="android:layout_marginBottom">5dp</item>
+	    <item name="android:layout_marginTop">5dp</item>
+	    
+	</style>
 </resources>
