--- a/shuishui/res/layout/fragment_two.xml
+++ b/shuishui/res/layout/fragment_two.xml
@@ -10,8 +10,8 @@
        android:id="@+id/text"
          android:layout_width="fill_parent"
          android:layout_height="40dp"
-         android:gravity="center_vertical"
-         android:text="我是第2个Fragment"
+         android:gravity="center"
+         android:text="第2个Fragment"
          android:textSize="20dp"
          android:textColor="@drawable/textdrwable"/>
 
