--- a/shuishui/res/layout/fragment_one.xml
+++ b/shuishui/res/layout/fragment_one.xml
@@ -9,7 +9,9 @@
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:gravity="center_vertical"
-         android:text="我是第一个Fragment,测试spinner"
+         android:text="第一个Fragment,测试spinner"
+         android:ellipsize="end"
+         android:singleLine="true"
          android:textSize="20dp"/>
     <Spinner
 	        android:id="@+id/spinner"
