add imageview plugin

--- a/shuishui/res/values/arrays.xml
+++ b/shuishui/res/values/arrays.xml
@@ -4,6 +4,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
    	<string-array name="colors"> 
         <item>黑色 | Black</item>  
