--- a/shuishui/res/values/color.xml
+++ b/shuishui/res/values/color.xml
@@ -7,4 +7,5 @@
     <color name="black">#000000</color>
     <color name="red">#ff0000</color>
     <color name="cfive">#C5C5C5</color>
+    <color name="pinks">#FF00FF</color>
 </resources>
