--- a/shuishui/res/layout/camera_set_activity_ly.xml
+++ b/shuishui/res/layout/camera_set_activity_ly.xml
@@ -5,26 +5,36 @@
     android:background="@color/white"
     android:orientation="vertical"
     tools:context="com.korewang.shuishui.activitys.CameraSettingActivity" >
+	
+	<com.korewang.shuishui.widget.HeaderView
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:id="@+id/headerDownView" />
 	<FrameLayout
         android:id="@+id/camera_preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1" >
-	    <com.korewang.shuishui.widget.HeaderView
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content"
-			    android:id="@+id/headerDownView" />
-	    <TextView
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="@string/hello_world" />
-    
-	     <Button
-	        android:id="@+id/button_capture"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="bottom|center"
-	        android:text="Capture" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:orientation="horizontal" >
+
+            <Button
+		        android:id="@+id/button_capture"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/capture" />
+	   	 	<Button
+		        android:id="@+id/button_"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/changeshine" />
+        </LinearLayout>
+	    
      </FrameLayout>
 
 </LinearLayout>
