--- a/shuishui/res/menu/matrix.xml
+++ b/shuishui/res/menu/matrix.xml
@@ -3,9 +3,14 @@
     tools:context="com.korewang.shuishui.MatrixActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/add"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="add"/>
+    <item
+        android:id="@+id/delete"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="delete"/>
 
 </menu>
